5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1758_1183.log
== TEST (2019-05-28 10:23:24) 
-- CODE:
from numpy import*
V = array(eval(input("vetor 1: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:24:28) 
-- CODE:
from numpy import*
V = array(eval(input("vetor 1: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:03:25) 
-- CODE:
from numpy import*
v1 = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v1)):
	if vtro[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v1) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while i <size(v1):
	if v1[i] >=0:
		vf[j]=v1[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.360146
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 9, in <module>
    if vtro[i]<0:
NameError: name 'vtro' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:03:27) 
-- CODE:
from numpy import*
v1 = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v1)):
	if vtro[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v1) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while i <size(v1):
	if v1[i] >=0:
		vf[j]=v1[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.31221
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 9, in <module>
    if vtro[i]<0:
NameError: name 'vtro' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:03:30) 
-- CODE:
from numpy import*
v1 = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v1)):
	if vtro[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v1) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while i <size(v1):
	if v1[i] >=0:
		vf[j]=v1[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.860685
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 9, in <module>
    if vtro[i]<0:
NameError: name 'vtro' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:03:30) 
-- CODE:
from numpy import*
v1 = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v1)):
	if vtro[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v1) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while i <size(v1):
	if v1[i] >=0:
		vf[j]=v1[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
1.64632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 9, in <module>
    if vtro[i]<0:
NameError: name 'vtro' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:03:30) 
-- CODE:
from numpy import*
v1 = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v1)):
	if vtro[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v1) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while i <size(v1):
	if v1[i] >=0:
		vf[j]=v1[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
1.63468
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 9, in <module>
    if vtro[i]<0:
NameError: name 'vtro' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:04:18) 
-- CODE:
from numpy import*
v1 = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v1)):
	if v1[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v1) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while i <size(v1):
	if v1[i] >=0:
		vf[j]=v1[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.603148
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v1[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:04:19) 
-- CODE:
from numpy import*
v1 = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v1)):
	if v1[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v1) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while i <size(v1):
	if v1[i] >=0:
		vf[j]=v1[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
1.14252
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v1[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:04:19) 
-- CODE:
from numpy import*
v1 = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v1)):
	if v1[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v1) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while i <size(v1):
	if v1[i] >=0:
		vf[j]=v1[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
1.15186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v1[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:09:11) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while i <size(v):
	if v[i] >=0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.393134
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:09:12) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while i <size(v):
	if v[i] >=0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.389068
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:10:46) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.290165
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:10:49) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.524967
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:10:49) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
1.24227
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:10:49) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
1.16364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:11:14) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]>0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.406098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:11:17) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]>0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
1.08876
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:11:18) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]>0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
1.55096
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:11:18) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]>0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
1.37852
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:13:18) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.382241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:13:20) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.453499
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:13:22) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.394419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:14:13) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.451813
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:14:14) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))


i=0
n=0

while (i < size(v)):
	if v[i]<0:
		n = n + 1
	i = i + 1
	
t = size(v) - n 
tf= zeros(t, dtype=int)

i = 0
j = 0

while j < size(v):
	if v[i] > 0:
		vf[j]=v[i]
		j = j + 1
	i = i + 1

print(vf)
-- EXECUTION TIME:
0.412866
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 21, in <module>
    vf[j]=v[i]
NameError: name 'vf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
